# soundcloud-graph

./: README.md  level1.py  level2.py  level3.py  pyproject.toml  setup.py
scgraphscrapper/: client.py  config.cfg  music_downloader.py  playlist.py  tag.py  track.py  user.py  utils.py
soundcloudgraph/: __init__.py  scgraph.py  utils.py
soundcloudgraph/collectors/: __init__.py  params.py  playlist.py  search.py  tag.py  track.py  user.py
