[tool.poetry]
name = "soundcloud-graph"
version = "0.1.0"
description = ""
authors = ["Augusto Nunes <nunes.augusto19@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
scdl = "^2.7.3"
numpy = "^1.26.2"
pandas = "^2.1.3"
tqdm = "^4.66.1"
p-tqdm = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
